<package>
  <name>wifi_comm</name>
  <version>0.1.0</version>
  <description >wifi_comm</description>
  <author>Gonçalo Cabrita and Pedro Sousa</author>
  <maintainer email="mahmoud.abdulgalil@gmail.com">Mahmoud Abdul Galil </maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/wifi_comm</url>
  <export>
    <cpp cflags="-I${prefix}/include -I${prefix}/msg/cpp" lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -lwifi_comm"/>
  </export>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>foreign_relay</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
</package>


