<package>
  <name>mrgs_data_interface</name>
  <version>0.1.0</version>
  <description >mrgs_data_interface</description>
  <author>vsantos</author>
  <maintainer email="mahmoud.abdulgalil@gmail.com">Mahmoud Abdul Galil </maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/mrgs_data_interface</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>wifi_comm</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>wifi_comm</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
